--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -111,7 +111,7 @@ cursor: pointer;
     position: relative;
     width: 100%;
    /* height: 830px; */
-    background: url(/images/header/H1bg.png) center center no-repeat;
+    background: url(/images/header/H1chu0.png) center center no-repeat;
     background-size: cover;
 
    
