--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -467,7 +467,7 @@ opacity: 1;
       }
       /* 工作列表 */
       .worklist{
-          position: absolute;
+          /* position: absolute; */
           display: flex;  
           flex-direction:row;
          justify-content:center ;
@@ -478,7 +478,7 @@ opacity: 1;
          bottom: 0;
           background: linear-gradient(to top, #1c1c1cde 30%, #1c1c1c00 100%);
           z-index: 1;
-          text-decoration: none;
+       
          
       }
 
