--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -467,7 +467,7 @@ opacity: 1;
       }
       /* 工作列表 */
       .worklist{
-          /* position: absolute; */
+          position: absolute;
           display: flex;  
           flex-direction:row;
          justify-content:center ;
