--- a/css/layout_mobile.css
+++ b/css/layout_mobile.css
@@ -566,18 +566,18 @@ color: rgb(207, 207, 207);
 @media(max-width:500px){
 
     #hobby a {
-    margin: 5% 2%;
+    margin: 5% 4%;
   
     }
     .hobbyBox {
-      width:100px;
-      height: 100px;
+      width:80px;
+      height: 80px;
    
     }
     #hobby .row p{
     
       margin-top: 10%;
-      font-size: 16px;
+      font-size: .8rem;
     }
   
     .hobbytext{
@@ -596,18 +596,18 @@ color: rgb(207, 207, 207);
   @media(max-width:320px){
 
     #hobby a {
-    margin: 5% 2%;
+    margin: 5% 3%;
   
     }
     .hobbyBox {
-      width:80px;
-      height: 80px;
+      width:70px;
+      height: 70px;
    
     }
     #hobby .row p{
     
       margin-top: 10%;
-      font-size: 12px;
+      font-size: 0.7rem;
     }
   
     .hobbytext{
