--- a/css/layout_mobile.css
+++ b/css/layout_mobile.css
@@ -25,7 +25,7 @@ height: 100%;
     background-color: var(--maindark);
     opacity: .9;
 z-index: 99;
-border: 5px solid rgba(255, 255, 255, 0.493);
+/* border: 5px solid rgba(255, 255, 255, 0.493); */
 transition: .5s;
 transform:translate3d(-1200px,0px,0px);
 }
