--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -111,7 +111,7 @@ nav {
   position: relative;
   width: 100%;
   /* height: 830px; */
-  background: url('../images/header/H1bg.png') center center no-repeat;
+  background: url('../images/header/H1bg.jpg') center center no-repeat;
 
   background-size: cover;
 
