--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -234,25 +234,25 @@ h1 {
 /* 關於我---------------------------------------------- */
 #about .container {
   /* text-align: center; */
-  margin-top: 2%;
+  margin-top: 3%;
 }
 .about-me {
   position: relative;
-  max-width: 400px;
+  max-width: 450px;
   margin: 0 auto;
   text-align: left;
   font-size: 0.9rem;
-  letter-spacing: 1px;
+  letter-spacing: 1.3px;
 
-  line-height: 2;
+  line-height: 2.3;
 }
 .littlechu {
   position: absolute;
-  bottom: 15px;
-  right: -10px;
+  bottom: -3px;
+  right: -25px;
 }
 .littlechu svg {
-  width: 100px;
+  width: 200px;
   fill: var(--maingray);
   opacity: 0.2;
   cursor: pointer;
@@ -265,18 +265,18 @@ h1 {
 .shy,
 .shy2 {
   position: absolute;
-  bottom: 106px;
-  right: 42px;
-  width: 8px;
-  height: 3px;
+  bottom: 112px;
+  right: 88px;
+  width: 12px;
+  height: 6px;
   background-color: rgb(233, 73, 108);
   border-radius: 50%;
   transform: rotate(169deg);
-  filter: blur(2px);
+  filter: blur(3px);
 }
 .shy2 {
-  bottom: 98px;
-  right: 70px;
+  bottom: 102px;
+  right: 125px;
 }
 .grayP {
   color: var(--maingray);
@@ -284,6 +284,50 @@ h1 {
 .grayP span {
   color: #ffffff;
   /* font-weight: 600; */
+}
+/* 證照技能 使用工具 的標題 */
+.aboutTitle{
+  font-size: .9rem;
+  color:var(--maingray);
+opacity: .5;
+  font-weight: 600;
+  margin: 2% 0 2% 0;
+  letter-spacing: 1.1px;
+}
+
+/* skills */
+.skillbox {
+  max-width:500px;
+  margin: 0 auto;
+  margin-bottom: 2%;
+  display: flex;
+  justify-content: center;
+
+}
+
+.skill_SET {
+  text-align: center;
+  /* max-width: 80px; */
+  margin: 0 0 4% 0;
+
+
+ 
+}
+.skill_SET p {
+ 
+  color: rgb(86, 86, 86);
+ 
+font-size: 0.7rem;
+margin: 0 auto;
+
+}
+
+.skills-icon {
+
+  width: 27px;
+  height: 27px;
+  /* margin: 3px auto; */
+ 
 }
 /* 證照 */
 
@@ -298,33 +342,11 @@ h1 {
   max-width: 190px;
   margin: 5px auto;
   /* color: var(--mainblue); */
-  color: var(--maingray);
-  border: 1px solid var(--maingray);
-  /* font-weight: 600; */
-/* background-color:rgba(182, 182, 182, 0.8); */
+  color: rgb(189, 189, 189);
+  border: 1px solid #424242;
+
   border-radius: 50px;
 }
-.aboutTitle{
-  font-size: 0.9rem;
-  color:var(--maingray);
-  font-weight: 600;
-  margin: 2% 0;
-}
-
-/* skills */
-.skilssbox {
-  max-width: 500px;
-  margin: 0 auto;
-  margin-bottom: 2%;
-  display: flex;
-  justify-content: center;
-}
-.skills-icon {
-  width: 20px;
-  height: 20px;
-  margin: 2% 2%;
-}
-
 /* 工作經歷------------------------------------ */
 .workbox {
   /* max-width:800px; */
