--- a/css/layout_mobile.css
+++ b/css/layout_mobile.css
@@ -387,6 +387,11 @@ font-size: 0.7rem;
     
         
         }
+        h4::before {
+          content: '●';
+          font-size: 2px;
+         
+      }
         .aboutTitle{
        
           margin: 4% 0 2% 0;
