--- a/css/layout_mobile.css
+++ b/css/layout_mobile.css
@@ -43,7 +43,7 @@ height: 50px;
     max-width: 400px;
     margin:50% auto;
 }
-.navListM a{
+.navListM li{
     display: flex;
     justify-content: center;
   text-decoration: none;
@@ -51,7 +51,7 @@ height: 50px;
   font-size: 1.5rem;
   line-height: 2;
 }
-.navListM a :active{
+.navListM li :active{
 
   color: var(--mainblue);
  
@@ -75,7 +75,7 @@ height: 50px;
     width: 30px;
     height: 30px;
 }
-.navListM a{
+.navListM li{
 
   font-size: 1rem;
   line-height: 2.5;
