--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -81,8 +81,8 @@ h3 {
 h4::before {
     content: '●';
     font-size: 8px;
-    color: var(--maingray);
-    opacity: 0.5;
+    color: var(--mainblue);
+    /* opacity: 0.7; */
     margin-right: 1%;
 }
 
@@ -157,7 +157,6 @@ nav {
 }
 
 .H1chu0 {
-    
     position: absolute;
     animation-name: chu;
     animation-duration: 2s;
@@ -227,6 +226,7 @@ h1 {
     animation-direction: alternate;
     animation-iteration-count: infinite;
     animation-fill-mode: both;
+    cursor: pointer;
 }
 
 .arrow_down:hover {
@@ -256,39 +256,44 @@ h1 {
 
 .about-me {
     position: relative;
-    max-width: 450px;
+    max-width: 850px;
     margin: 0 auto;
-    text-align: left;
-    font-size: 0.9rem;
+    /* text-align: left; */
+    font-size: 1rem;
     letter-spacing: 1.3px;
     line-height: 2;
     margin-bottom: 3%;
 }
 
+.about-me h4 {
+    display: inline;
+}
+
 .littlechu {
     position: absolute;
-    bottom: -3px;
-    right: -25px;
+    bottom: 10px;
+    left: 0px;
 }
 
 .littlechu svg {
-    width: 200px;
+    position: relative;
+    width: 170px;
     fill: var(--maingray);
-    opacity: 0.2;
+    opacity: .5;
     cursor: pointer;
     transition: 2s;
 }
 
 .shybox {
     opacity: 0;
-    transition: 2s;
+    transition: 1s;
 }
 
 .shy,
 .shy2 {
     position: absolute;
-    bottom: 112px;
-    right: 88px;
+    bottom: 108px;
+    right: 73px;
     width: 12px;
     height: 6px;
     background-color: rgb(233, 73, 108);
@@ -298,8 +303,8 @@ h1 {
 }
 
 .shy2 {
-    bottom: 102px;
-    right: 125px;
+    bottom: 98px;
+    right: 110px;
 }
 
 .grayP {
@@ -315,20 +320,22 @@ h1 {
 /* 證照技能 使用工具 的標題 */
 
 .aboutTitle {
+    max-width: 110px;
     font-size: .9rem;
     color: var(--maingray);
-    opacity: .5;
+    opacity: .8;
     font-weight: 600;
-    margin: 4% 0 2% 0;
+    margin: 4% auto 2% auto;
     letter-spacing: 1.1px;
+    border: 1px solid #7c7c7c;
+    border-radius: 50px;
 }
 
 
 /* skills */
 
 .skillbox {
- 
-    max-width: 500px;
+    max-width: 800px;
     margin: 0 auto;
     margin-bottom: 2%;
     display: flex;
@@ -338,7 +345,7 @@ h1 {
 .skill_SET {
     text-align: center;
     /* max-width: 80px; */
-    margin: 0 0 1% 0;
+    margin: 2% 2%;
 }
 
 .skill_SET p {
@@ -353,9 +360,9 @@ h1 {
 }
 
 .skills-icon {
-    width: 30px;
-    height: 30px;
-   margin-top: 10px;
+    width: 40px;
+    height: 40px;
+    /* margin-top: 10px; */
 }
 
 
@@ -367,15 +374,23 @@ h1 {
 }
 
 .License {
-    font-size: 0.8rem;
+    font-size: .9rem;
     line-height: 28px;
     text-align: center;
-    max-width: 190px;
+    width: 200px;
     margin: 5px auto;
     /* color: var(--mainblue); */
     color: rgb(221, 221, 221);
-    border: 1px solid #585858;
-    border-radius: 50px;
+    /* border: 1px solid #585858; */
+    /* border-radius: 50px; */
+}
+
+.License-box p::before {
+    content: '#';
+    font-size: 18px;
+    color: var(--mainblue);
+    /* opacity: 0.5; */
+    margin-right: 1%;
 }
 
 
