主頁之外的 分頁 nav mobile 偵測到達指定頁面修改

--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -942,6 +942,7 @@ margin: 0 auto;
     height: 35px;
     /* fill:#363636; */
     /* filter: saturate(0); */
+    margin: 2%;
 }
 
 .botLine {
@@ -1081,7 +1082,7 @@ margin: 0 auto;
 }
 
 
-/*------------興趣頁----------------------------*/
+/*------------興趣 詳細頁----------------------------*/
 
 .notebox {
     max-width: 700px;
