--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -78,13 +78,6 @@ h3 {
     font-size: 22px;
 }
 
-h4::before {
-    content: '●';
-    font-size: 8px;
-    color: var(--mainblue);
-    /* opacity: 0.7; */
-    margin-right: 1%;
-}
 
 nav {
     position: fixed;
@@ -263,10 +256,21 @@ h1 {
     letter-spacing: 1.3px;
     line-height: 2;
     margin-bottom: 3%;
+     word-break:keep-all;
+    /* 中文遇符號段行 */
 }
 
 .about-me h4 {
     display: inline;
+}
+
+h4::before {
+    content: '●';
+    font-size: 6px;
+    color: var(--mainblue);
+    /* opacity: 0.7; */
+    margin-right: 1%;
+    margin-left: 1%;
 }
 
 .littlechu {
