--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -283,7 +283,7 @@ h4::before {
     position: relative;
     width: 170px;
     fill: var(--maingray);
-    opacity: .5;
+    opacity: .1;
     cursor: pointer;
     transition: 2s;
 }
@@ -373,7 +373,7 @@ h4::before {
 /* 證照 */
 
 .License-box {
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto;
 }
 
@@ -381,7 +381,7 @@ h4::before {
     font-size: .9rem;
     line-height: 28px;
     text-align: center;
-    width: 200px;
+    /* width: 200px; */
     margin: 5px auto;
     /* color: var(--mainblue); */
     color: rgb(221, 221, 221);
@@ -393,7 +393,7 @@ h4::before {
     content: '#';
     font-size: 15px;
     color: var(--maingray);
-    opacity: 0.8;
+    opacity: 0.4;
     margin-right: 1%;
 }
 
