--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -1057,13 +1057,14 @@ margin: 0 auto;
     border-radius: 10px;
     overflow: hidden;
     z-index: 5;
-    padding: 2% 0 1% 0;
+    padding: 2% 1% 1% 1%;
 }
 
 .popBox img {
     width: 100%;
     max-height: 600px;
     object-fit: contain;
+
 }
 
 .popBox p {
