--- a/css/layout_mobile.css
+++ b/css/layout_mobile.css
@@ -500,6 +500,18 @@
   #hobby h2 {
     margin-top: 12%;
   }
+  #hobby .hobbytext p {
+    max-width: 600px;
+    line-height: 2.2;
+    font-size: 1.2rem;
+    margin-top: 5%;
+  }
+  footer {
+    height: 90px;
+  }
+  .footerbg {
+    padding: 2% 0 3% 0;
+  }
 }
 
 @media (max-width: 1000px) {
@@ -517,15 +529,31 @@
     margin-top: 10%;
     font-size: 20px;
   }
-  .hobbytext {
+  #hobby .hobbytext p {
+    margin-top: 3%;
     max-width: 500px;
-    line-height: 2;
+    line-height: 2.0;
+    font-size: 1rem;
   }
+  
+
+footer {
+  height: 90px;
+}
   .footerbg {
     padding: 3% 0 3% 0;
   }
 }
+@media (max-width: 600px) {
 
+  #hobby .hobbytext p  {
+    margin-top: 5%;
+    max-width: 450px;
+    line-height: 2;
+    font-size: 0.7rem;
+  }
+
+}
 @media (max-width: 500px) {
   #hobby a {
     margin: 5% 4%;
@@ -538,7 +566,7 @@
     margin-top: 10%;
     font-size: 0.8rem;
   }
-  .hobbytext {
+  #hobby .hobbytext p  {
     margin-top: 5%;
     max-width: 283px;
     line-height: 2;
@@ -565,10 +593,11 @@
     margin-top: 10%;
     font-size: 0.7rem;
   }
-  .hobbytext {
+  #hobby .hobbytext p  {
     max-width: 270px;
     line-height: 2;
     font-size: 0.7rem;
+    margin-top: 1%;
   }
   .footerbg {
     padding: 4% 0 3% 0;
@@ -735,7 +764,7 @@ left:47%; */
   }
   .picBox {
     margin: 5% auto;
-    max-width: 270px;
+    max-width: 290px;
     column-count: 2;
   }
   .picBox img {
@@ -769,11 +798,16 @@ left:47%; */
     max-width: 70px;
     margin: 3% auto 0 auto;
     font-size: 0.8rem;
+
   }
 }
 
 @media (max-width: 540px) {
+  .notebox {
+    max-width: 400px;
+    font-size: 12px;
 
+  }
   .HBbgLine {
     border-radius: 0px;
     padding: 4% 0;
@@ -795,4 +829,12 @@ left:47%; */
     margin: 2% auto 0 auto;
     font-size: 0.7rem;
   }
+}
+@media (max-width: 414px) {
+  .notebox {
+    max-width: 284px;
+    font-size: 11px;
+
+  }
+
 }
