--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -779,11 +779,12 @@ bottom: 0px; */
 #hobby .hobbytext p {
  
     max-width: 600px;
-    position: relative;
+ 
     margin: 0 auto;
     color: var(--maingray);
     line-height: 2;
     word-break: keep-all;
+    word-wrap: break-word;
     margin-top: 1%;
     font-size: 0.9rem;
     overflow: hidden;
@@ -1108,7 +1109,7 @@ object-fit: cover;
 /*------------興趣 詳細頁----------------------------*/
 
 .notebox {
-    position: relative;
+
     max-width: 700px;
     color: var(--maingray);
     font-size: 16px;
@@ -1116,7 +1117,7 @@ object-fit: cover;
     line-height: 2;
     word-break: keep-all;
     /* 中文遇符號段行 */
-    word-wrap:normal;
+    word-wrap: break-word;
     text-align: center;
     overflow: hidden;
 }
