--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -45,9 +45,8 @@
 body {
   background-color: var(--maindark);
   color: #fff;
-  font-family: Roboto, 'Noto Sans', sans-serif, 'Helvetica Neue', Arial,
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: 'Roboto','Noto Sans TC', sans-serif;
+ 
   /* word-break:keep-all; */
   /* 中文遇符號段行 */
   font-weight: 500;
@@ -244,10 +243,6 @@ h1 {
 
 /* 關於我---------------------------------------------- */
 
-#about .container {
-  /* text-align: center; */
-  /* margin-top: 3%; */
-}
 
 .about-me {
   position: relative;
