--- a/css/layout_desktop.css
+++ b/css/layout_desktop.css
@@ -260,15 +260,25 @@ h1 {
 .about-me h4 {
   display: inline;
 }
+.dot{
+  display:inline-block;
+  width: 5px;
+  height: 5px;
+  background:var(--mainblue);
+ border-radius: 50%;
 
-h4::before {
+  margin-right: 5px;
+  margin-left:  5px;
+  
+}
+/* h4::before {
   content: '●';
   font-size: 5px;
   color: var(--mainblue);
-  /* opacity: 0.7; */
+  opacity: 0.7;
   margin-right: 1%;
   margin-left: 1%;
-}
+} */
 
 .littlechu {
   position: absolute;
