--- a/css/layout_mobile.css
+++ b/css/layout_mobile.css
@@ -264,11 +264,22 @@
     font-size: 0.7rem;
     margin-bottom: 2%;
   }
-  h4::before {
+  .dot{
+    display:inline-block;
+    width: 3px;
+    height: 3px;
+
+
+  
+    margin-right: 2px;
+    margin-left:  2px;
+    
+  }
+  /* h4::before {
     content: '●';
     font-size: 3px;
     line-height: 1.2;
-  }
+  } */
   .aboutTitle {
     font-size: 0.6rem;
     margin: 3% auto;
@@ -314,11 +325,21 @@
     font-size: 0.7rem;
     max-width: 180px;
   }
-  h4::before {
+  .dot{
+
+    width: 2px;
+    height: 2px;
+
+  
+    margin-right: 2px;
+    margin-left:  2px;
+    
+  }
+  /* h4::before {
     content: '●';
     font-size: 3px;
     line-height: 1.2;
-  }
+  } */
   .aboutTitle {
     margin: 7% auto;
   }
